--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 						experienced in designing <strong>beneficial</strong> and 
 						<strong> meaningful  experiences</strong> for target users. If, somehow, she's not 
 						questioning the design of everyday things (and systems), you can 
-						find her rolled up in <em>all</em> the plush blankets eating <strong>pizza</strong>.
+						find her om-nomming on <strong>pizza</strong>.
 						
 					</p><!-- // .site-desc -->
 				</div><!-- // .desktop-6 -->
