--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
 				<div class="desktop-6 columns">
 					<p class="site-desc"> 
 						Resumé: <a href="http://bit.do/resumebyvictoria" title="Open PDF Resumé"><strong>PDF Link</strong></a><br>
-						Favorite Pizza: pan-friend pineapple and pepperoni with classic red
+						Design Keywords: Visual Communication, UI/UX, Experiential <br>
 						Superpower: I'm never tired of eating pizza<br>
 						Languages: English, Chinese, "Spanish"
 					</p><!-- // .site-desc -->
@@ -175,7 +175,7 @@
 						<div class="desktop-6 tablet-6 columns">
 							<h4>"Research, Ideate, Design!"</h4>
 						<p>Victoria is interested in the intersectionality of design 
-						and the realms of: education, health, and social change.
+						and the realms of:<strong> education</strong>, <strong>health</strong>, and<strong> social change</strong>.
 						She believes design is a powerful solution to promoting awareness 
 						and education of topics like invisible disabilities, self-care,  and sustainable living. A majority of her time is spent brainstorming and researching in order to design the best experiences for the user. She enjoys designing both digital and environmental experiences. 
 						</div><!-- // .desktop-6 -->
@@ -193,7 +193,7 @@
 
 						<div class="desktop-6 pull-3 tablet-6 tablet-pull-0 columns">
 							<h4>Pizza? Pizza! </h4>
-							<p>One of the best days of my life was the day Blaze Pizza opened. Make your own pie: red sauce, mozarella cheese, green pepper, mushroom, chopped red onion, Italian sausage, ALL THE SPINACH, sea salt, and pesto drizzled on when it's all done. The pizza photographed was from Blue Line in Mountain View, CA. Take me back, please.</p>
+							<p>I love pizza almost as much as I love design - I can't live without it. Let's eat pizza together. Let's eat pizza every day. </p>
 						</div><!-- // .desktop-6 -->
 
 						<div class="clear"></div>
