--- a/about.html
+++ b/about.html
@@ -120,7 +120,6 @@
 						Resumé: <a href="http://bit.do/resumebyvictoria" title="Open PDF Resumé"><strong>PDF Link</strong></a><br>
 						Design Keywords: Visual Communication, UI/UX, Experiential <br>
 						Superpower: I'm never tired of eating pizza<br>
-						Languages: English, Chinese, "Spanish"
 					</p><!-- // .site-desc -->
 				</div><!-- // .desktop-6 -->
 
@@ -173,7 +172,7 @@
 						</div><!-- // .desktop-3 -->
 
 						<div class="desktop-6 tablet-6 columns">
-							<h4>"Research, Ideate, Design!"</h4>
+							<h4>Making Change</h4>
 						<p>Victoria is interested in the intersectionality of design 
 						and the realms of:<strong> education</strong>, <strong>health</strong>, and<strong> social change</strong>.
 						She believes design is a powerful solution to promoting awareness 
