Resume//SEO Update
updated resume link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	================================================== -->
 	<meta charset="utf-8">
 	<title>Victoria Yuen-Ruan | Designer </title>
-	<meta name="description" content="The wild llama chase with Victoria Yuen-Ruan through her Visual Design Portfolio">
+	<meta name="description" content="The wild llama chase with Victoria Yuen-Ruan through her Visual Design Portfolio. Graphic|UI|UX|Illustration ">
 	<meta name="author" content="Victoria Yuen-Ruan">
 	
 	<!-- Mobile Specific Metas
