--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
 
 				<div class="desktop-6 columns">
 					<p class="site-desc"> 
-						Resumé: <a href="https://drive.google.com/file/d/0BxHmu6ouxMhdbjNWUFJBT180ZEk/view" title="Open PDF Resumé"><strong>PDF Link</strong></a><br>
+						Resumé: <a href="https://drive.google.com/file/d/0BxHmu6ouxMhdT1RFVm5mR3B0cUE/view?usp=sharing" title="Open PDF Resumé"><strong>PDF Link</strong></a><br>
 						Design Keywords: Visual Communication, UI/UX, Experiential <br>
 						Superpower: I'm never tired of eating pizza<br>
 					</p><!-- // .site-desc -->
