--- a/amiallama.html
+++ b/amiallama.html
@@ -139,7 +139,9 @@
 
 							<p>Project |  Develop a mobile-friendly website for Aerospace Museum of California on a topic related to science. <br><br> 
 		
-							This website follows the journey of Jimmy, an animal who is uncertain of whether he is an alpaca or a llama. The highlight of each page is the illustration in order to engage the audience of elementary school-level children. 
+							This website follows the journey of Jimmy, an animal who is uncertain of whether he is an alpaca or a llama. The highlight of each page is the illustration in order to engage the audience of elementary school-level children. <br><br> 
+
+							A constraint was to only use HTML/CSS and no Javascript. However motion and interaction if used right and can be fun and engaging. CSS Hovers were used to make the buttons bounce. Another interactive element is a "quiz question" at the end asking users to identify Jimmy as an Alpaca or a Llama. 
 							 </p>
 						</div><!-- // .box-info -->
 
