--- a/graphics.html
+++ b/graphics.html
@@ -141,6 +141,8 @@
 							<p>A variety of posters, photos, illustrations, infographics, and marketing materials I've made over the past couple years.
 							 </p>
 
+							 <p>Shown here:<br>Thrifted Clothing Letterforms<br>Biodiversity Museum Day<br>PG&E Bill Re-design<br>Sustainable Tea as Service Design</p>
+
 							 <p> For more graphics check out my Tumblr - <a href="https://thellamawentmeow.tumblr.com"><strong>The Llama Went Meow</strong></a>. 
 						</div><!-- // .box-info -->
 
