--- a/gubi.html
+++ b/gubi.html
@@ -139,6 +139,7 @@
 
 							<p>Developing a brand identity for a gummy vitamin product called Gubi. </p>
 							<p> The target audience encompasses young, trendy, environmentally conscious females who may have children. There are both adult and children versions of the supplement so it's a full range service with sustainable packaging. </p>
+							<p> A challenge with this design is differentiating it from its competitors of mass market gummy vitamin supplements and finding the right niche.</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
