Herbarium link fix
Fixed a broken link

--- a/herbarium.html
+++ b/herbarium.html
@@ -143,7 +143,7 @@
 
 							A requirement by the Herbarium curator was an Upcoming Events bar fixed to the left side of the website. <br><br>
 
-							To view the existing website, <a href="https://herbarium.ucdavis.edu"> click <strong>here</strong></a>.
+							To view the existing website, <a href="https://www.herbarium.ucdavis.edu"> click <strong>here</strong></a>.
 
 							 </p>
 						</div><!-- // .box-info -->
