Graphics HTML | Secret Link to 127 Project
Added secret link to the report I wrote for DES127 about rethinking
convenient tea as a service

--- a/graphics.html
+++ b/graphics.html
@@ -184,7 +184,7 @@
 				<img src="images/letterforms.gif" alt="Photos of Letterforms made from clothing" />
 				<img src="images/biodayposter.jpg" alt="Biodiversity Museum Day Poster" />
 				<img src="images/utilityposter.jpg" alt="Re-designed utility bill" />
-				<img src="images/teaposter.png" alt="Rethinking convenient tea poster"/>
+				<a href="http://goo.gl/FnNy0L"><img src="images/teaposter.png" alt="Rethinking convenient tea poster"/></a>
 
 			</div><!-- // .desktop-9 -->
 
