Gubi Photos Updated//CTA Links
Added new photos & process book.
Added links to websites.

--- a/bicycleloop.html
+++ b/bicycleloop.html
@@ -136,6 +136,7 @@
 							<h3 class="border-top">Davis Bicycle Loop</h3>
 							<p class="project-desc">2015</p>
 
+							<p><em>Link to process book<em>: <a href="http://issuu.com/victoriayuen-ruan/docs/des186_final_michaelvillasvictoriay">HERE</a>
 							<p>Project |  Redevelop a visual identification system and wayifinding signage for the Davis Bicycle Loop. <br><br> 
 							The Davis Bicycle Loop | It is a 12 mile route around the city of Davis created as a pleasant and scenic pathway for walking, jogging, and bicycling. 
 							<br> <br>
