--- a/gubi.html
+++ b/gubi.html
@@ -137,6 +137,7 @@
 							<h3 class="border-top">Gubi</h3>
 							<p class="project-desc">2016</p>
 
+							<p><em>Link to full process manual</em>:<a href="http://issuu.com/victoriayuen-ruan/docs/gubi_final_process_manual.compresse/1"> CLICK HERE</a></p>
 							<p>Developing a brand identity for a gummy vitamin product called Gubi. </p>
 							<p> The target audience encompasses young, trendy, environmentally conscious females who may have children. There are both adult and children versions of the supplement so it's a full range service with sustainable packaging. </p>
 							<p> A challenge with this design is differentiating it from its competitors of mass market gummy vitamin supplements and finding the right niche.</p>
@@ -176,9 +177,9 @@
 			<div class="clear show-under-tablet"></div>
 
 			<div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
-
-				<img src="images/gubi_wallpaper.png" alt="" /></a>
-				<img src="images/gubi_stationery.png" alt="" />
+				<img src="images/gubi_website.jpg" alt="Mockup of landing page" />
+				<img src="images/gubi_triangles.jpg" alt="Individual triangles of Gubi package" />
+				<img src="images/gubi_package.jpg" alt="front back view of Gubi package" /> 
 				<img src="images/gubi_envelope.png" alt="" />
 				<img src="images/gubi_card.png" alt="" />
 
