Changed <em> to <strong>
I mix them up a lot. meant to bold. not italicize.

--- a/amiallama.html
+++ b/amiallama.html
@@ -137,7 +137,7 @@
 							<h3 class="border-top">Am I a LLama</h3>
 							<p class="project-desc">2015</p>
 
-							<p><em>Play Am I a Llama?:</em><a href="amiallama/index.html"> HERE</a></p> 
+							<p><strong>Play Am I a Llama?:</strong><a href="amiallama/index.html"> HERE</a></p> 
 							<p>Project |  Develop a mobile-friendly website for Aerospace Museum of California on a topic related to science. <br><br> 
 		
 							This website follows the journey of Jimmy, an animal who is uncertain of whether he is an alpaca or a llama. The highlight of each page is the illustration in order to engage the audience of elementary school-level children. <br><br> 
