--- a/gubi.html
+++ b/gubi.html
@@ -137,7 +137,7 @@
 							<h3 class="border-top">Gubi</h3>
 							<p class="project-desc">2016</p>
 
-							<p><em>Link to full process manual</em>:<a href="http://issuu.com/victoriayuen-ruan/docs/gubi_final_process_manual.compresse/1"> CLICK HERE</a></p>
+							<p><strong>Link to full process manual</strong>:<a href="http://issuu.com/victoriayuen-ruan/docs/gubi_final_process_manual.compresse/1"> CLICK HERE</a></p>
 							<p>Developing a brand identity for a gummy vitamin product called Gubi. </p>
 							<p> The target audience encompasses young, trendy, environmentally conscious females who may have children. There are both adult and children versions of the supplement so it's a full range service with sustainable packaging. </p>
 							<p> A challenge with this design is differentiating it from its competitors of mass market gummy vitamin supplements and finding the right niche.</p>
