Fix Groovy Smoothies link

--- a/groovysmoothies.html
+++ b/groovysmoothies.html
@@ -134,7 +134,7 @@
 							<h3 class="border-top">Groovy Smoothies</h3>
 							<p class="project-desc">2015</p>
 
-							<p><a href="https://groovysmoothies.co"><strong>Play Groovy Smoothies: HERE</strong></a></p>
+							<p><a href="http://groovysmoothies.co"><strong>Play Groovy Smoothies: HERE</strong></a></p>
 							<p>Project: To develop a game that teaches children  about color. <br><br>
 
 							This is a game about color mixing! The user reads the instructions and based on the different fruit they're presented, they drag the fruit into the smoothie blender. The smoothie blender will blend the fruits and show you the color that occurs when you mix those colors together. 
@@ -180,7 +180,7 @@
 			<div class="clear show-under-tablet"></div>
 
 			<div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
-				<img src="images/groovy_screen.png" alt="Screenshot of gameplay" />
+				<a href="http://groovysmoothies.co"><img src="images/groovy_screen.png" alt="Screenshot of gameplay" /></a>
 				<p> Game best viewed in Chrome Browser with sound ON </p>
 				<a href="http://groovysmoothies.co"><img src="images/view_groovy.png" alt="View Groovy Smoothies Game" /></a>
 				<img src="images/groovy_fruits.png" alt="Fruit illustrations used in Groovy Smoothies" />
