Wrong link//Copy change
Need to re-write about page.
Contact page had wrong Works link

--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="#works">
+						<a href="index.html#works">
 							<span class="count hide-on-mobile">02.</span>
 							Works
 						</a>
