Link Color Change//Bio Change
Changed the link colors to pink from back so they’d stand out from the
rest of the description

--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
 
 						<div class="desktop-6 tablet-6 columns">
 							<h4>My Story</h4>
-							<p>As I graduate college in a couple months, I still haven't figured out whether I like to write in the first or third person more. I studied at UC Davis for nearly five years in a variety of majors that when combined all together turned into this super neat-o amalgamation of a major called <em> DESIGN</em>. I like creative projects and I love helping people. So when every other major was a wealth of knowledge, I wanted to pull it all together to do something meaningful for both me and others. </p>
+							<p>As a recent college graduate, I studied at UC Davis for nearly five years in a variety of majors that when combined all together turned into this super neat-o amalgamation of a major called <em> DESIGN</em>. I like creative projects and I love helping people. So by absorbing the knowledge from the different disciplines I came across, I strive to be a designer that can bring life to solutions that people need.</p>
 						</div><!-- // .desktop-6 -->
 
 						<div class="clear"></div>
@@ -164,10 +164,10 @@
 
 						<div class="desktop-6 tablet-6 columns">
 							<h4>Making Change</h4>
-						<p>Victoria is interested in the intersectionality of design 
+						<p>I'm incredibly interested in the intersectionality of design 
 						and the realms of:<strong> education</strong>, <strong>health</strong>, and<strong> social change</strong>.
-						She believes design is a powerful solution to promoting awareness 
-						and education of topics like invisible disabilities, self-care,  and sustainable living. A majority of her time is spent brainstorming and researching in order to design the best experiences for the user. She enjoys designing both digital and environmental experiences. 
+						I believe design is a powerful solution to promoting awareness 
+						and education of topics like invisible disabilities, self-care, and sustainable living. I do a lot of brainstorming and researching in order to design the best experiences for the user. To make the change I want to see, I always start off first with my trusted - pencil and sketchbook. 
 						</div><!-- // .desktop-6 -->
 
 						<div class="clear"></div>
