--- a/bicycleloop.html
+++ b/bicycleloop.html
@@ -126,7 +126,7 @@
 							<h3 class="border-top">Davis Bicycle Loop</h3>
 							<p class="project-desc">2015</p>
 
-							<p><strong><a href="http://issuu.com/victoriayuen-ruan/docs/des186_final_michaelvillasvictoriay">Link to process book: HERE </a></strong></p>
+							<p><strong><a style="color:#dd9f97" href="http://issuu.com/victoriayuen-ruan/docs/des186_final_michaelvillasvictoriay">Link to process book: HERE </a></strong></p>
 							<p>Project |  Redevelop a visual identification system and wayifinding signage for the Davis Bicycle Loop. <br><br> 
 							The Davis Bicycle Loop | It is a 12 mile route around the city of Davis created as a pleasant and scenic pathway for walking, jogging, and bicycling. 
 							<br> <br>
