--- a/graphics.html
+++ b/graphics.html
@@ -132,7 +132,7 @@
 
 							 <p>Shown here:<br>Thrifted Clothing Letterforms<br>Biodiversity Museum Day<br>PG&E Bill Re-design<br>Sustainable Tea as Service Design</p>
 
-							 <p> For more graphics check out my Tumblr - <a href="https://thellamawentmeow.tumblr.com"><strong>The Llama Went Meow</strong></a>. 
+							 <p> For more graphics check out my Tumblr - <a style="color:#dd9f97" href="https://thellamawentmeow.tumblr.com"><strong>The Llama Went Meow</strong></a>. 
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -170,10 +170,10 @@
 
 			<div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
 
-				<img src="images/letterforms.gif" alt="Photos of Letterforms made from clothing" />
 				<img src="images/biodayposter.jpg" alt="Biodiversity Museum Day Poster" />
 				<img src="images/utilityposter.jpg" alt="Re-designed utility bill" />
 				<a href="http://goo.gl/FnNy0L"><img src="images/teaposter.png" alt="Rethinking convenient tea poster"/></a>
+				<img src="images/letterforms.gif" alt="Photos of Letterforms made from clothing" />
 
 			</div><!-- // .desktop-9 -->
 
