--- a/loveletter.html
+++ b/loveletter.html
@@ -127,7 +127,7 @@
 							<h3 class="border-top">Self-Love Letter</h3>
 							<p class="project-desc">2015</p>
 
-							<p><a href="loveletter/index.html"><strong>PLAY LOVE LETTER 2.0</strong></a></p>
+							<p><a style="color:#dd9f97" href="loveletter/index.html"><strong>PLAY LOVE LETTER 2.0</strong></a></p>
 							<p>Project |  To use Javascript to create a MadLibs styled game.  <br><br> 
 		
 							Promoting self-care is one of my passions. I had a free prompt to develop any sort of MadLibs like game so I wanted to center it on self-love and reminding folks how wonderful they are regardless of how rough life can be.
