--- a/amiallama.html
+++ b/amiallama.html
@@ -128,7 +128,7 @@
 							<h3 class="border-top">Am I a LLama</h3>
 							<p class="project-desc">2015</p>
 
-							<p><strong>Play Am I a Llama?:</strong><a href="amiallama/index.html"> HERE</a></p> 
+							<p><strong><a style="color:#dd9f97" href="amiallama/index.html"> Play Am I a Llama?: HERE</a></strong></p> 
 							<p>Project |  Develop a mobile-friendly website for Aerospace Museum of California on a topic related to science. <br><br> 
 		
 							This website follows the journey of Jimmy, an animal who is uncertain of whether he is an alpaca or a llama. The highlight of each page is the illustration in order to engage the audience of elementary school-level children. <br><br> 
