--- a/groovysmoothies.html
+++ b/groovysmoothies.html
@@ -124,7 +124,7 @@
 							<h3 class="border-top">Groovy Smoothies</h3>
 							<p class="project-desc">2015</p>
 
-							<p><a href="http://groovysmoothies.co"><strong>Play Groovy Smoothies: HERE</strong></a></p>
+							<p><a style="color:#dd9f97" href="http://groovysmoothies.co"><strong>Play Groovy Smoothies: HERE</strong></a></p>
 							<p>Project: To develop a game that teaches children  about color. <br><br>
 
 							This is a game about color mixing! The user reads the instructions and based on the different fruit they're presented, they drag the fruit into the smoothie blender. The smoothie blender will blend the fruits and show you the color that occurs when you mix those colors together. 
