Re-link index page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<div class="box col-sm-4 col-md-6">
 						<div class="thumb featured">
 							<div class="photo">
-								<a href="work.html">
+								<a href="index.html">
 									<img src="img/blurb_hero.png" alt="" width="715" height="715">
 									<!--<span class="info"><strong class="big-title"> Victoria designs&mdash;</strong><span class="excerpt"></span><em class="arrow-right"></em></span>-->
 								</a>
