About page wording edit
Took out one word. Just one. Do I get to pick which one? Yes. Yes, I
do.

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
 						<p>My passions and interests beyond design include but are not limited to: education, self care, illustration, mental health, pizza with red sauce, lifelong learning, thrifting, and social change. Currently I am a freelance graphic designer based in Santa Cruz, CA.</p>
 						<a href="victoria_yuen-ruan_resume.pdf" class="button filled">Download Resumé</a>&nbsp;&nbsp;&nbsp;&nbsp;
 						<a href="mailto:v.yuenruan@gmail.com" class="button filled">Send me a love letter &hearts;</a><hr>
-						<h5 id="email">Let's work together! </h5><p style="color:#ff677a"> Contact me at email: v.yuenruan@gmail.com.</p> 
+						<h5 id="email">Let's work together! </h5><p style="color:#ff677a"> Contact me at: v.yuenruan@gmail.com.</p> 
 						
 						<div class="margin-4"></div>
 					</div>
