Web Link Open in New Window
Changed the Love Letter site to open in a new page

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<div class="box col-xs-6 col-sm-4 col-md-3">
 						<div class="thumb">
 							<div class="photo">
-								<a href="loveletter/index.html">
+								<a href="loveletter/index.html" target="_blank">
 									<img src="img/loveletter_hero.jpg" alt="" width="434" height="434">
 									<span class="info"><strong class="title">Self-Love Letter</strong><span class="excerpt">Write yourself a love letter playing this MadLibs-style game made by yours truly.</span><em class="arrow-right"></em></span>
 								</a>
