Fixing typos on Hashman page
There was a typo. I fixed it.

--- a/hashman.html
+++ b/hashman.html
@@ -65,7 +65,7 @@
 				</div>
 				<div class="col-sm-8 col-md-8 col-md-offset-1">
 					<h5> About Hashman Infused</h5>
-					<p><a href="http://hashmaninfused.net">Hashman Infused</a> is a startup business that sells and creates medical cannabis goods. Often advertised together, their counterpart business is <a href="http://waxmanconcentrates.com">Waxman Concentrates.</a> As a growing business, they're discovering the best ways to reach their target audiences through e-mail campaigns and social media. Current projects with with this business include developing marketing material for their upcoming campaigns developing an idea that fits for: e-mail, fliers, table tents, Instagram, etc.</p>
+					<p><a href="http://hashmaninfused.net">Hashman Infused</a> is a startup business that sells and creates medical cannabis goods. Often advertised together, their counterpart business is <a href="http://waxmanconcentrates.com">Waxman Concentrates.</a> As a growing business, they're discovering the best ways to reach their target audiences through e-mail campaigns and social media. Current projects with this business include developing marketing material for their upcoming campaigns for: e-mail, fliers, table tents, Instagram, etc. I've also shot some of their product photography as they re-new their product line.</p>
 					
 					<div class="margin-1"></div>
 				</div>
