--- a/about.html
+++ b/about.html
@@ -54,11 +54,11 @@
 				<div class="margin-4"></div>
 				<div class="row">
 					<div class="col-md-6">
-						<h3> Victoria the designer&mdash;</h3>
+						<h3> Victoria the Designer&mdash;</h3>
 						<div class="margin-4"></div> 
 					</div>
 					<div class="col-md-6">
-						<p>My passions and interests beyond design include but are not limited to: education, self care, illustration, mental health, pizza with red sauce, lifelong learning, thrifting, and social change. Currently I am a freelance graphic designer based in Santa Cruz, CA.</p>
+						<p> I graduated from UC Davis with a B.A. in Design this March 2016. My passions and interests beyond design include but are not limited to: education, self care, illustration, mental health, pizza with red sauce, lifelong learning, thrifting, and social change. Currently I am a freelance graphic designer based in Santa Cruz, CA.</p>
 						<a href="victoria_yuen-ruan_resume.pdf" class="button filled">Download Resumé</a>&nbsp;&nbsp;&nbsp;&nbsp;
 						<a href="mailto:v.yuenruan@gmail.com" class="button filled">Send me a love letter &hearts;</a><hr>
 						<h5 id="email">Let's work together! </h5><p style="color:#ff677a"> Contact me at: v.yuenruan@gmail.com.</p> 
