--- a/index.html
+++ b/index.html
@@ -75,9 +75,19 @@
 					<div class="box col-xs-6 col-sm-4 col-md-3">
 						<div class="thumb">
 							<div class="photo">
+								<a href="biodiversity.html">
+									<img src="img/biodiversity_hero.png" alt="" width="434" height="434">
+									<span class="info"><strong class="title">Biodiversity Museum Day</strong><span class="excerpt">Marketing</span><em class="arrow-right"></em></span>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="box col-xs-6 col-sm-4 col-md-3">
+						<div class="thumb">
+							<div class="photo">
 								<a href="foodfully.html">
 									<img src="img/foodfully_hero.jpg" alt="" width="434" height="434">
-									<span class="info"><strong class="title">Foodful.ly</strong><span class="excerpt">UI | Graphics</span><em class="arrow-right"></em></span>
+									<span class="info"><strong class="title">Foodful.ly</strong><span class="excerpt">User Interface | Graphics</span><em class="arrow-right"></em></span>
 								</a>
 							</div>
 						</div>
@@ -92,43 +102,13 @@
 							</div>
 						</div>
 					</div>
+					
 					<div class="box col-xs-6 col-sm-4 col-md-3">
 						<div class="thumb">
 							<div class="photo">
-								<a href="biodiversity.html">
-									<img src="img/biodiversity_hero.png" alt="" width="434" height="434">
-									<span class="info"><strong class="title">Biodiversity Museum Day</strong><span class="excerpt">Marketing</span><em class="arrow-right"></em></span>
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="box col-xs-6 col-sm-4 col-md-3">
-						<div class="thumb">
-							<div class="photo">
-								<a href="groovysmoothies.html">
-									<img src="img/groovy_hero.png" alt="" width="434" height="434">
-									<span class="info"><strong class="title">Groovy Smoothies</strong><span class="excerpt">Game Design | UI/UX</span><em class="arrow-right"></em></span>
-								</a>
-							</div>
-						</div>
-					</div>
-
-					<div class="box col-xs-6 col-sm-4 col-md-3">
-						<div class="thumb">
-							<div class="photo">
-								<a href="loveletter/index.html" target="_blank">
-									<img src="img/loveletter_hero.jpg" alt="" width="434" height="434">
-									<span class="info"><strong class="title">Self-Love Letter</strong><span class="excerpt">Write yourself a love letter playing this MadLibs-style game made by yours truly.</span><em class="arrow-right"></em></span>
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="box col-xs-6 col-sm-4 col-md-3">
-						<div class="thumb">
-							<div class="photo">
-								<a href="infographic.html">
-									<img src="img/utility_hero.jpg" alt="" width="434" height="434">
-									<span class="info"><strong class="title">Utility Bill Redesign</strong><span class="excerpt">Infographic</span><em class="arrow-right"></em></span>
+								<a href="bottlecap.html" target="_blank">
+									<img src="img/bottlecap_hero.jpg" alt="" width="434" height="434">
+									<span class="info"><strong class="title">UI Prototype</strong><span class="excerpt">User Interface</span><em class="arrow-right"></em></span>
 								</a>
 							</div>
 						</div>
@@ -143,6 +123,28 @@
 							</div>
 						</div>
 					</div>
+
+					<div class="box col-xs-6 col-sm-4 col-md-3">
+						<div class="thumb">
+							<div class="photo">
+								<a href="tarot.html">
+									<img src="img/tarot_hero.jpg" alt="" width="434" height="434">
+									<span class="info"><strong class="title">Guide to Tarot</strong><span class="excerpt">Infographic</span><em class="arrow-right"></em></span>
+								</a>
+							</div>
+						</div>
+					</div>
+										<div class="box col-xs-6 col-sm-4 col-md-3">
+						<div class="thumb">
+							<div class="photo">
+								<a href="#">
+									<img src="img/block.png" alt="Lucid Sound and Picture" width="434" height="434">
+									<span class="info"><strong class="title">Lucid Sound &amp; Picture</strong><span class="excerpt">Coming Soon.</span><em class="arrow-right"></em></span>
+								</a>
+							</div>
+						</div>
+					</div>
+					
 				</div>
 			</div>
 			<div class="clear"></div>
