Lucid Project Updated!!
Finally added Lucid Project with photos and descriptions. Business
cards. www.lucidsoundandpicture.com

--- a/bikeloop.html
+++ b/bikeloop.html
@@ -71,7 +71,7 @@
 					<p> The Loop is a scenic twelve mile bike path around the perimeter of Davis aimed at connecting people to their local surroundings. It is currently being used as a commuter path with limited recreational use. The path is not particularly a well known route unless you are a local or enjoy bike riding for fun. </p>
 
 					<h5> What is the Objective?</h5>
-					<p>The objective is to re-new the Davis Bicycle Loop with new wayfinding and signage as well as a brand new visual identity system in order to increase usage of the Davis Bicycle Loop.</p> 
+					<p>The objective is to re-new the Davis Bicycle Loop with new wayfinding and signage as well as a brand new visual identity system in order to increase awareness and use of the Davis Bicycle Loop.</p> 
 
 					<h5> Research & Process</h5>
 					<img src="img/loop_wayfinding.jpg" width="800" height="371" alt="current wayfinding of the davis bicycle loop"> <br><br>
@@ -119,6 +119,14 @@
 				</div>
 				<div class="thumb dark-overlay">
 					<div class="photo">
+						<a href="bottlecap.html">
+							<img src="img/bottlecap_hero.jpg" alt="" width="434" height="434">
+							<span class="info"><span class="big-excerpt">UI Prototype</span></span>
+						</a>
+					</div>
+				</div>
+				<div class="thumb dark-overlay">
+					<div class="photo">
 						<a href="loveletter/index.html">
 							<img src="img/loveletter_hero.jpg" alt="" width="715" height="715">
 							<span class="info"><span class="big-excerpt">Self-Love Letter</span></span>
@@ -127,9 +135,18 @@
 				</div>
 				<div class="thumb dark-overlay">
 					<div class="photo">
-						<a href="infographic.html">
-							<img src="img/utility_hero.jpg" alt="" width="715" height="715">
-							<span class="info"><span class="big-excerpt">Utility Bill Re-design</span></span>
+						<a href="tarot.html">
+							<img src="img/tarot_hero.jpg" alt="" width="434" height="434">
+							<span class="info"><span class="big-excerpt">Guide to Tarot</span></span>
+						</a>
+					</div>
+				</div>
+		
+				<div class="thumb dark-overlay">
+					<div class="photo">
+						<a href="lucid.html">
+							<img src="img/lucid_hero.jpg" alt="" width="434" height="434">
+							<span class="info"><span class="big-excerpt">Lucid Sound and Picture</span></span>
 						</a>
 					</div>
 				</div>
