--- a/index.html
+++ b/index.html
@@ -82,12 +82,13 @@
 							</div>
 						</div>
 					</div>
+			
 					<div class="box col-xs-6 col-sm-4 col-md-3">
 						<div class="thumb">
 							<div class="photo">
-								<a href="foodfully.html">
-									<img src="img/foodfully_hero.jpg" alt="" width="434" height="434">
-									<span class="info"><strong class="title">Foodful.ly</strong><span class="excerpt">User Interface | Graphics</span><em class="arrow-right"></em></span>
+								<a href="bikeloop.html">
+									<img src="img/loop_hero.jpg" alt="" width="434" height="434">
+									<span class="info"><strong class="title">The Loop</strong><span class="excerpt">Branding | Wayfinding</span><em class="arrow-right"></em></span>
 								</a>
 							</div>
 						</div>
@@ -95,9 +96,9 @@
 					<div class="box col-xs-6 col-sm-4 col-md-3">
 						<div class="thumb">
 							<div class="photo">
-								<a href="bikeloop.html">
-									<img src="img/loop_hero.jpg" alt="" width="434" height="434">
-									<span class="info"><strong class="title">The Loop</strong><span class="excerpt">Branding | Wayfinding</span><em class="arrow-right"></em></span>
+								<a href="foodfully.html">
+									<img src="img/foodfully_hero.jpg" alt="" width="434" height="434">
+									<span class="info"><strong class="title">Foodful.ly</strong><span class="excerpt">User Interface | Graphics</span><em class="arrow-right"></em></span>
 								</a>
 							</div>
 						</div>
@@ -137,9 +138,9 @@
 										<div class="box col-xs-6 col-sm-4 col-md-3">
 						<div class="thumb">
 							<div class="photo">
-								<a href="#">
-									<img src="img/block.png" alt="Lucid Sound and Picture" width="434" height="434">
-									<span class="info"><strong class="title">Lucid Sound &amp; Picture</strong><span class="excerpt">Coming Soon.</span><em class="arrow-right"></em></span>
+								<a href="lucid.html">
+									<img src="img/lucid_hero.jpg" alt="Lucid Sound and Picture" width="434" height="434">
+									<span class="info"><strong class="title">Lucid Sound &amp; Picture</strong><span class="excerpt">Branding</span><em class="arrow-right"></em></span>
 								</a>
 							</div>
 						</div>
