View More Works - Updated
At the bottom of project pages, I added more links to the View More
Works footer. Particularly adding the three new projects: tarot, bottle
cap, and lucid

--- a/bottlecap.html
+++ b/bottlecap.html
@@ -66,7 +66,7 @@
 				<div class="col-sm-8 col-md-8 col-md-offset-1">
 					<h5> What kind of mobile app would bottle collectors want?</h5>
 					<p>An exercise on prototyping a mobile application for bottlecap enthusiasts. </p>
-					<p>Three are three main features: Store, Collection, and News. Navigation is housed in a menu bar at the top, where the user can tap on the menu items or swipe left or right from page to page. As this was an assignment with a deadline, it was an initial iteration. If I were to re-design it, I think I would make the news page less compact. Give each article more room to breathe and more content to read without having to go into the link beforehand. </p>
+					<p>Three are three main features: Store, Collection, and News. Navigation is housed in a menu bar at the top, where the user can tap on the menu items or swipe left or right from page to page. As this was an assignment with a deadline, it was an initial iteration. If I were to design it again, I would make the news page less compact. I would give each article more padding around the content and add more content to read without having to go into the link beforehand. </p>
 					
 					<div class="margin-1"></div>
 				</div>
@@ -111,6 +111,30 @@
 						<a href="loveletter/index.html">
 							<img src="img/loveletter_hero.jpg" alt="" width="715" height="715">
 							<span class="info"><span class="big-excerpt">Self-Love Letter</span></span>
+						</a>
+					</div>
+				</div>
+					<div class="thumb dark-overlay">
+					<div class="photo">
+						<a href="lucid.html">
+							<img src="img/lucid_hero.jpg" alt="" width="434" height="434">
+							<span class="info"><span class="big-excerpt">Lucid Sound &amp; Picture</span></span>
+						</a>
+					</div>
+				</div>
+				<div class="thumb dark-overlay">
+					<div class="photo">
+						<a href="foodfully.html">
+							<img src="img/foodfully_hero.jpg" alt="" width="434" height="434">
+							<span class="info"><span class="big-excerpt">Foodful.ly</span></span>
+						</a>
+					</div>
+				</div>
+				<div class="thumb dark-overlay">
+					<div class="photo">
+						<a href="tarot.html">
+							<img src="img/tarot_hero.jpg" alt="" width="434" height="434">
+							<span class="info"><span class="big-excerpt">Guide to Tarot</span></span>
 						</a>
 					</div>
 				</div>
