--- a/groovysmoothies.html
+++ b/groovysmoothies.html
@@ -114,11 +114,27 @@
 						</a>
 					</div>
 				</div>
+					<div class="thumb dark-overlay">
+					<div class="photo">
+						<a href="lucid.html">
+							<img src="img/lucid_hero.jpg" alt="" width="434" height="434">
+							<span class="info"><span class="big-excerpt">Lucid Sound &amp; Picture</span></span>
+						</a>
+					</div>
+				</div>
 				<div class="thumb dark-overlay">
 					<div class="photo">
-						<a href="biodiversity.html">
-							<img src="img/biodiversity_hero.png" alt="" width="434" height="434">
-							<span class="info"><span class="big-excerpt">Groovy Smoothies</span></span>
+						<a href="bottlecap.html">
+							<img src="img/bottlecap_hero.jpg" alt="" width="434" height="434">
+							<span class="info"><span class="big-excerpt">UI Prototype</span></span>
+						</a>
+					</div>
+				</div>
+				<div class="thumb dark-overlay">
+					<div class="photo">
+						<a href="tarot.html">
+							<img src="img/tarot_hero.jpg" alt="" width="434" height="434">
+							<span class="info"><span class="big-excerpt">Guide to Tarot</span></span>
 						</a>
 					</div>
 				</div>
