--- a/hashman.html
+++ b/hashman.html
@@ -107,6 +107,30 @@
 						</a>
 					</div>
 				</div>
+					<div class="thumb dark-overlay">
+					<div class="photo">
+						<a href="lucid.html">
+							<img src="img/lucid_hero.jpg" alt="" width="434" height="434">
+							<span class="info"><span class="big-excerpt">Lucid Sound &amp; Picture</span></span>
+						</a>
+					</div>
+				</div>
+				<div class="thumb dark-overlay">
+					<div class="photo">
+						<a href="bottlecap.html">
+							<img src="img/bottlecap_hero.jpg" alt="" width="434" height="434">
+							<span class="info"><span class="big-excerpt">UI Prototype</span></span>
+						</a>
+					</div>
+				</div>
+				<div class="thumb dark-overlay">
+					<div class="photo">
+						<a href="tarot.html">
+							<img src="img/tarot_hero.jpg" alt="" width="434" height="434">
+							<span class="info"><span class="big-excerpt">Guide to Tarot</span></span>
+						</a>
+					</div>
+				</div>
 				<div class="thumb dark-overlay">
 					<div class="photo">
 						<a href="loveletter/index.html">
@@ -125,9 +149,9 @@
 				</div>
 				<div class="thumb dark-overlay">
 					<div class="photo">
-						<a href="hashman.html">
-							<img src="img/hashman_hero.jpg" alt="" width="715" height="715">
-							<span class="info"><span class="big-excerpt">Hashman Infused</span></span>
+						<a href="foodfully.html">
+							<img src="img/foodfully_hero.jpg" alt="" width="715" height="715">
+							<span class="info"><span class="big-excerpt">Foodful.ly</span></span>
 						</a>
 					</div>
 				</div>
