--- a/biodiversity.html
+++ b/biodiversity.html
@@ -106,6 +106,30 @@
 				</div>
 				<div class="thumb dark-overlay">
 					<div class="photo">
+						<a href="lucid.html">
+							<img src="img/lucid_hero.jpg" alt="" width="434" height="434">
+							<span class="info"><span class="big-excerpt">Lucid Sound &amp; Picture</span></span>
+						</a>
+					</div>
+				</div>
+				<div class="thumb dark-overlay">
+					<div class="photo">
+						<a href="bottlecap.html">
+							<img src="img/bottlecap_hero.jpg" alt="" width="434" height="434">
+							<span class="info"><span class="big-excerpt">UI Prototype</span></span>
+						</a>
+					</div>
+				</div>
+				<div class="thumb dark-overlay">
+					<div class="photo">
+						<a href="tarot.html">
+							<img src="img/tarot_hero.jpg" alt="" width="434" height="434">
+							<span class="info"><span class="big-excerpt">Guide to Tarot</span></span>
+						</a>
+					</div>
+				</div>
+				<div class="thumb dark-overlay">
+					<div class="photo">
 						<a href="loveletter/index.html">
 							<img src="img/loveletter_hero.jpg" alt="" width="715" height="715">
 							<span class="info"><span class="big-excerpt">Self-Love Letter</span></span>
