Meta Description Updated
Meta description updated for more fluidity
Updated About to reflect current circumstance
Updated lucid page for wording

--- a/bottlecap.html
+++ b/bottlecap.html
@@ -5,7 +5,7 @@
 	<title>Victoria Yuen-Ruan &mdash; UI Prototype</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="description" content="Design Portfolio by Victoria Yuen-Ruan showcasing visual design, illustration, branding, and UX | Santa Cruz, CA">
+	<meta name="description" content="A design portfolio by Victoria Yuen-Ruan showcasing visual design, illustration, branding, and UX. She is a Visual Designer based in Santa Cruz, CA.">
 	<meta name="keywords" content="Victoria Yuen-Ruan, Design, Portfolio, Santa Cruz, Visual Designer, Illustration">
 
 	<link rel="shortcut icon" href="favicon.png">
