--- a/groovysmoothies.html
+++ b/groovysmoothies.html
@@ -5,7 +5,7 @@
 	<title>Victoria Yuen-Ruan &mdash; Groovy Smoothies</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="description" content="Design Portfolio by Victoria Yuen-Ruan showcasing visual design, illustration, branding, and UX.">
+	<meta name="description" content="A design portfolio by Victoria Yuen-Ruan showcasing visual design, illustration, branding, and UX. She is a Visual Designer based in Santa Cruz, CA.">
 	<meta name="keywords" content="Victoria Yuen-Ruan, Design, Portfolio, Bay Area, Visual Designer, Illustration">
 
 	<link rel="shortcut icon" href="favicon.png">
