Broken Work Link FIXED
Fixed broken work link.

--- a/hashman.html
+++ b/hashman.html
@@ -30,10 +30,9 @@
 				<div id="site-menu">
 					<nav>
 						<ul>
-							<li><a href="index.html">Home</a></li>
 							<li><a href="about.html">About</a></li>
 							<li class="current-menu-item">
-								<a href="work.html">Work</a>
+								<a href="index.html">Work</a>
 							</li>
 							<li>
 								<a href="about.html#email">Contact</a>
