--- a/foodfully.html
+++ b/foodfully.html
@@ -30,15 +30,13 @@
 				<div id="site-menu">
 					<nav>
 						<ul>
-							<li><a href="index.html">Home</a></li>
 							<li><a href="about.html">About</a></li>
 							<li class="current-menu-item">
-								<a href="work.html">Work</a>
+								<a href="index.html">Work</a>
 							</li>
 							<li>
 								<a href="about.html#email">Contact</a>
 							</li>
-		
 						</ul>
 					</nav>
 				</div>
