New Hashman material
Stuff stuff for the hashman portfolio item

--- a/hashman.html
+++ b/hashman.html
@@ -52,7 +52,7 @@
 			<div class="owl-carousel owl-slider">
 				<img src="img/hashman_tinctures.jpg" width="1240" height="698" alt="Product photography of Hashman Canna Drops">
 				<img src="img/hashman_poster.jpg" width="1240" height="698" alt="Hashman Poster">
-				<img src="img/hashman_emails.jpg" width="1240" height="698" alt="Hashman E-Mails">
+				<img src="img/hashman_flyer.jpg" width="1240" height="698" alt="Hashman Flyer">
 
 
 				
