--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 					</div>
 					<div class="col-md-6">
 						<p> In early 2016 I graduated from UC Davis with a B.A. in Design.</p>
-						<p> The world I experience now is heavily influenced by design thinking. However my passions and interests beyond design include but are not limited to: education, self care, illustration, mental health, Japanese street fashion, thrifting, and social change. I am currently a freelance graphic designer based in Santa Cruz, CA. If you'd like to see more work samples, you are always welcome to leave a message.</p>
+						<p> The world I experience now is heavily influenced by design thinking. However my passions and interests beyond design include but are not limited to: education, self care, illustration, mental health, Japanese street fashion, thrifting, and social change. I am currently a freelance graphic designer based in Santa Cruz, CA. Are you in the area? Let's collaborate!</p>
 						<a href="victoria_yuen-ruan_resume.pdf" class="button filled">Download Resumé</a>&nbsp;&nbsp;&nbsp;&nbsp;
 						<a href="mailto:v.yuenruan@gmail.com" class="button filled">Send me a love letter &hearts;</a><hr>
 						<h5 id="email">Let's work together! </h5><p style="color:#ff677a"> Contact me at: v.yuenruan@gmail.com.</p> 
