New About Summary
Updating my Summary for 2017

--- a/about.html
+++ b/about.html
@@ -58,8 +58,8 @@
 						<div class="margin-4"></div> 
 					</div>
 					<div class="col-md-6">
-						<p> In early 2016 I graduated from UC Davis with a B.A. in Design.</p>
-						<p> The world I experience now is heavily influenced by design thinking. However my passions and interests beyond design include but are not limited to: education, self care, illustration, mental health, Japanese street fashion, thrifting, and social change. I am currently a freelance graphic designer based in Santa Cruz, CA. Are you in the area? Let's collaborate!</p>
+						<p> Hello! I'm Victoria. I'm a UC Davis '16 Design B.A. graduate currently freelancing in Santa Cruz, CA. I'm currently available for Graphic Design and Illustration work. Whether it's thinking through a product or creating an eye-catching show poster, the process always emphasizes understanding the target audience and finding ways to engage them seamlessly. </p>
+						<p> My current passions and interests beyond design include but are not limited to: drawing, education, self care, mental health, Japanese street fashion, thrifting, and social change. Are you in the area? I'd love to collaborate!</p>
 						<a href="victoria_yuen-ruan_resume.pdf" class="button filled">Download Resumé</a>&nbsp;&nbsp;&nbsp;&nbsp;
 						<a href="mailto:v.yuenruan@gmail.com" class="button filled">Send me a love letter &hearts;</a><hr>
 						<h5 id="email">Let's work together! </h5><p style="color:#ff677a"> Contact me at: v.yuenruan@gmail.com.</p> 
