Revised Meta tags
Trying to be less student and more professional thx

--- a/bikeloop.html
+++ b/bikeloop.html
@@ -5,8 +5,8 @@
 	<title>Victoria Yuen-Ruan &mdash; The Loop</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="description" content="A design portfolio by Victoria Yuen-Ruan showcasing visual design, illustration, branding, and UX. She is a Visual Designer based in Santa Cruz, CA.">
-	<meta name="keywords" content="Victoria Yuen-Ruan, Design, Portfolio, Bay Area, Visual Designer, Illustration">
+	<meta name="description" content="Santa Cruz, CA based Designer & Illustrator experienced in visual communication, illustration, branding, and UI|UX. Available for any design and illustration service requests.">
+	<meta name="keywords" content="Victoria Yuen-Ruan, Design, Portfolio, Bay Area, Visual Designer, Illustration, Graphics, Santa Cruz">
 
 	<link rel="shortcut icon" href="favicon.png">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400italic%7CRoboto:400,700%7CDroid+Serif" rel="stylesheet" type="text/css">
